# ttc

sir-model/: CMakeLists.txt  README.md
sir-model/src/: grafo_matriz.cpp  jazz.net
sir-model/src/Testes e Resultados/: Testes TTC.xlsx
sir-model/src/graph/: aresta.h  graph.cpp  graph.h  solucao.cpp  solucao.h  vertice.cpp  vertice.h
sir-model/src/redes/quantificadas/: dolphins.net  email.net  football.net  jazz.net  karate_quantificada.net  lesmis.net  polbooks.net
sir-model/src/utils/: utils.cpp  utils.h
